# sam3d-video-pose

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/sam3d/: README.md  batch_folder.yaml  default.yaml  demo_adult.yaml  demo_infant.yaml  demo_nhp.yaml  demo_raptor.yaml  demo_toddler.yaml  quick_test.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/sam3d/: BUNDLE_ADJUSTMENT_INTEGRATION.md  CAMT_INTEGRATION.md  CONFIG_AND_EXPERIMENT_LOGGING.md  METRICS_LOGGING_GUIDE.md  QUALITY_FILTER_TUNING.md  README.md  README_ADDENDUM.md  TEMPORAL_SMOOTHING.md  USAGE_MODES.md
experiments/: runs_log.json
experiments/Infant_babbling_in_crib_20260217_002938/: config.yaml  run_metadata.json
experiments/Infant_babbling_in_crib_20260217_003245/: run_metadata.json
experiments/Infant_babbling_in_crib_20260217_003519/: run_metadata.json
experiments/Infant_babbling_in_crib_20260217_003642/: run_metadata.json
experiments/Infant_babbling_in_crib_20260217_003748/: config.yaml  run_metadata.json
experiments/Infant_babbling_in_crib_20260217_012134/: config.yaml  run_metadata.json
experiments/Infant_babbling_in_crib_20260217_015650/: config.yaml  run_metadata.json
notebooks/sam3d/: README.md  demo_infant.ipynb
output/Infant_babbling_in_crib/: Infant_babbling_in_crib_3D_raw.csv  Infant_babbling_in_crib_mesh_results.json  Infant_babbling_in_crib_quality_log.json  Infant_babbling_in_crib_segments.json
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0000_obj_0/: frame_0_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0001_obj_0/: frame_1_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0002_obj_0/: frame_2_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0003_obj_0/: frame_3_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0004_obj_0/: frame_4_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0005_obj_0/: frame_5_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0006_obj_0/: frame_6_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0007_obj_0/: frame_7_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_meshes/frame_0008_obj_0/: frame_8_obj_0_focal_length.json  keypoints.json  mhr_parameters.npz
output/Infant_babbling_in_crib/Infant_babbling_in_crib_metrics/: metrics_summary.json  sample_sizes.csv
output/Infant_babbling_in_crib/Infant_babbling_in_crib_smoothed/: metadata.json
sam3dvideo/: cli.py
sam3dvideo/processing/: __init__.py  bundle_adjuster.py  metrics_logger.py  quality_analyzer.py  temporal_smoother.py
sam3dvideo/reconstruction/: __init__.py  keypoint_extractor.py  mesh_estimator.py
sam3dvideo/segmentation/: __init__.py  appearance_embedder.py  sam3_segmenter.py  target_selector.py
sam3dvideo/utils/: __init__.py  config_loader.py  experiment_logger.py  patches.py  video_download.py
scripts/: analyze_kinematics.py  batch_process.py  compare_movement_pca.py  convert_coco_csv.py  debug_camera_orientation.py  demo.py  extract_3d_pose.py  overlay_skeleton_on_video.py  process_video.py  render_mesh_video.py  track_person.py  visualize_3d_keypoints.py
(+873 files in other folders)
